<resources>
    <string name="app_name">CricketLive365</string>
    <string name="follow">Follow</string>
    <string name="followed">Unfollowed</string>
    <string name="collect">Collection</string>
    <string name="all_comment">All comments</string>
    <string name="write_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="loading">Loading</string>
    <string name="setting">Settings</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="please_login">Please login</string>
    <string name="please_join_writer">requires creator to publish</string>
    <string name="empty_data">No data yet</string>
    <string name="dialog_change_sex">Modify gender</string>
    <string name="dialog_select_from_album">Select from phone album</string>
    <string name="dialog_select_from_take_picture">Take a picture</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="team">Team</string>
    <string name="unit_yuan">yuan</string>
    <string name="anchor">Anchor</string>
    <string name="author">Author</string>
    <string name="user">User</string>
    <string name="language">language</string>
    <string name="language_zh">Simplified Chinese</string>
    <string name="language_zht">Chinese Traditional</string>
    <string name="language_en">English</string>
    <string name="position_forward">forward</string>
    <string name="position_midfield">Midfield</string>
    <string name="position_guard">guard</string>
    <string name="position_goalkeeper">Goalkeeper</string>
    <string name="position_unknown">unknown</string>
    <string name="comment">Comment</string>
    <string name="report">Report</string>
    <string name="share">Share</string>
    <string name="diamond">Dragon Diamond</string>
    <string name="submit">Submit</string>
    <string name="more">more</string>
    <string name="apply">Apply</string>
    <string name="tip_report_success">report success</string>
    <string name="tip_scroll_to_today">Today</string>
    <string name="second">seconds</string>
    <string name="tip_exit_app">Press again to exit</string>
    <string name="network_is_weak">Network is weak</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="tip_network_error_one">Server exception, please try again later</string>
    <string name="tip_login_error_one">The login status is invalid, please log in again</string>
    <string name="tip_login_error_two">please sign in</string>
    <string name="comments">comments</string>
    <string name="replies">replies</string>
    <string name="user_protocol">User Protocol</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hint">hint</string>
    <string name="fans">Fans:</string>
    <string name="fans_1">Fans</string>
    <string name="tips">Tips</string>
    <string name="refresh_header_pulling">Pull down to refresh</string>
    <string name="refresh_header_refreshing">Refreshing</string>
    <string name="refresh_header_loading">loading</string>
    <string name="refresh_header_release">Refresh immediately after release</string>
    <string name="refresh_header_finish">Refresh complete</string>
    <string name="refresh_header_failed">Refresh failed</string>
    <string name="refresh_header_update">\'Last Update\' M-d HH:mm</string>
    <string name="refresh_footer_pulling">Pull up to load more</string>
    <string name="refresh_footer_release">Release and load immediately</string>
    <string name="refresh_footer_loading">loading</string>
    <string name="refresh_footer_refreshing">Refreshing</string>
    <string name="refresh_footer_finish">Download Finished</string>
    <string name="refresh_footer_failed">Failed to load</string>
    <string name="refresh_footer_nothing">No more Data</string>
    <string name="empty_common">No data yet</string>
    <string name="empty_match_collect">You don\'t have a favorite match yet, go to it</string>
    <string name="main_tab_match">Match</string>
    <string name="main_tab_theme">News</string>
    <string name="main_tab_live">Live</string>
    <string name="main_tab_video">Videos</string>
    <string name="main_tab_user">My</string>
    <string name="short_videos">Short videos</string>
    <string name="setting_clear_cache">Clear cache</string>
    <string name="setting_clear_cache_ing">clearing</string>
    <string name="setting_clear_cache_success">cache cleared</string>
    <string name="setting_customer">Customer Service</string>
    <string name="setting_protocol">User Agreement and Policy of Use</string>
    <string name="setting_sign_out">Log Out</string>
    <string name="setting_sign_in">Log In</string>
    <string name="found_new_version">Found new version</string>
    <string name="update_now">Update Now</string>
    <string name="match_hot">Hot</string>
    <string name="match_football">Football</string>
    <string name="match_basketball">Basketball</string>
    <string name="match_data">data</string>
    <string name="match_all">all</string>
    <string name="match_hot_channel_title">Hot matches</string>
    <string name="match_complete">complete</string>
    <string name="match_started">match started</string>
    <string name="match_schedule">match schedule</string>
    <string name="match_result">match result</string>
    <string name="match_collect">collection</string>
    <string name="user_login">Login</string>
    <string name="user_register">/register</string>
    <string name="user_login_tip">Log in to get more exciting content~</string>
    <string name="user_my_diamond">My Dragon Diamond</string>
    <string name="user_charge">Recharge</string>
    <string name="user_withdraw_diamond">withdrawable dragon diamond</string>
    <string name="user_withdraw">Withdrawal</string>
    <string name="user_diamond_unit">pcs</string>
    <string name="user_my_follow">My Follow</string>
    <string name="user_my_reserve">My Reservations</string>
    <string name="user_my_space">My Space</string>
    <string name="user_my_msg">My Message</string>
    <string name="user_my_level">My Level</string>
    <string name="user_activity_center">Activity Center</string>
    <string name="user_speaker_history">Speaker History</string>
    <string name="user_online_customer">Online Customer Service</string>
    <string name="user_common_problem">FAQ</string>
    <string name="phone_login">Phone Login</string>
    <string name="password_login">Password Login</string>
    <string name="please_input_phone_number">Please enter phone number</string>
    <string name="please_input_phone_number_new">Phone number</string>
    <string name="please_input_verify_code">Please enter the verification code</string>
    <string name="please_input_verify_code_new">Verification code</string>
    <string name="get_verify_code">Auth Code</string>
    <string name="get_verify_code_fail">Failed to get verification code</string>
    <string name="get_code_again">refetch</string>
    <string name="btn_login">Log In</string>
    <string name="register_new_account">Register new account</string>
    <string name="forget_password">Forgot password?</string>
    <string name="login_protocol_and_privacy_one">I read and agree</string>
    <string name="login_protocol_and_privacy_two">User Service Agreement</string>
    <string name="login_protocol_and_privacy_three">and</string>
    <string name="login_protocol_and_privacy_four">Privacy Policy</string>
    <string name="login_agree_protocol_tip">Please agree to the agreement</string>
    <string name="login_success">Login successful</string>
    <string name="send_code_title">SMS verification code will be sent to:</string>
    <string name="please_enter_new_password">Please enter a new password</string>
    <string name="please_enter_new_password_tip">6-12 alphanumeric characters</string>
    <string name="please_input_login_pwd">Please enter a 6~16-digit login password</string>
    <string name="please_input_pwd_again">Please re-enter password</string>
    <string name="please_input_pwd_hint">Please enter password</string>
    <string name="please_input_confirm_pwd_hint">Please confirm password</string>
    <string name="register_pwd_error">Different password with what you set</string>
    <string name="btn_register">Register</string>
    <string name="forget_pwd">Forgot password</string>
    <string name="confirm_commit">Confirm Commit</string>
    <string name="football_match_setting_title">Football Score Settings</string>
    <string name="language_display">language display</string>
    <string name="red_and_yellow_card_display">red and yellow card display</string>
    <string name="event_notification_range">Event notification range</string>
    <string name="goal_tip">Goal tip</string>
    <string name="voice">voice</string>
    <string name="shake">shake</string>
    <string name="red_card_tip">Red card tip</string>
    <string name="corner_kick_tip">Corner tip</string>
    <string name="on_the_spot">(On the spot)</string>
    <string name="basketball_match_setting_title">Basketball Score Setting</string>
    <string name="prematch_ranking_display">Prematch ranking display</string>
    <string name="index_display">index display</string>
    <string name="index_company">Index Company</string>
    <string name="pay_password">Payment Password</string>
    <string name="floating_window_play">floating window play</string>
    <string name="floating_window_play_tip">The floating permission window has been closed, and the small window cannot be displayed temporarily.</string>
    <string name="floating_window_open">Open now></string>
    <string name="check_for_update">Check for Updates</string>
    <string name="about_us">About Us</string>
    <string name="copyright_title">Copyright Declaration</string>
    <string name="version_info">Version Info</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_tip">Confirm the clearing the cache</string>
    <string name="update_password">Change password</string>
    <string name="tip_change_pwd_success">Modified successfully</string>
    <string name="log_out">Logout account</string>
    <string name="confirm_sign_out_tip">Are you sure you want to sign out</string>
    <string name="goal">Goal</string>
    <string name="penalty_kick">penalty kick</string>
    <string name="substitution">Substitution</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">yellow card</string>
    <string name="corner_kick">corner kick</string>
    <string name="two_yellows_sent_off">Two yellows sent off</string>
    <string name="hurt">hurt</string>
    <string name="kick_off">Kickoff</string>
    <string name="own_goals">Own goal</string>
    <string name="missed_penalty">Missed penalty</string>
    <string name="company">Company</string>
    <string name="main">Main</string>
    <string name="guest">Guest</string>
    <string name="pankou">Handicap</string>
    <string name="index_update_time">Change disk time</string>
    <string name="end_rangqiu">Handicap end</string>
    <string name="date_or_match">date/match</string>
    <string name="main_team">Home Team</string>
    <string name="compare_score">score</string>
    <string name="guest_team">Away Team</string>
    <string name="panlu">Painting</string>
    <string name="my_space_headline_three">Favorites</string>
    <string name="my_space_community_one">Post</string>
    <string name="my_space_community_two">Reply</string>
    <string name="my_concerns">My concerns</string>
    <string name="my_message">My message</string>
    <string name="system_settings">System settings</string>
    <string name="system_share">Share OneCric.tv</string>
</resources>