<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="8dp"
        android:orientation="vertical"
        android:background="@mipmap/bg_football_match_event_introduction">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_goal"
                android:drawablePadding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/penalty_kick"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_penalty_kick"
                android:drawablePadding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/substitution"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_substitution"
                android:drawablePadding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/red_card"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_red_card_2"
                android:drawablePadding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/yellow_card"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_yellow_card_2"
                android:drawablePadding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corner_kick"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_corner_kick"
                android:drawablePadding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/two_yellows_sent_off"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_two_yellows_sent_off"
                android:drawablePadding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/hurt"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_hurt"
                android:drawablePadding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/kick_off"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_kick_off"
                android:drawablePadding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/own_goals"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_own_goals"
                android:drawablePadding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missed_penalty"
                android:textSize="12dp"
                android:textColor="@color/c_333333"
                android:drawableLeft="@mipmap/icon_missed_penalty"
                android:drawablePadding="3dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>