<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_space_community_one"
            android:textSize="14dp"
            android:textColor="@color/c_E3AC72"/>

        <TextView
            android:id="@+id/tv_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_space_community_two"
            android:textSize="14dp"
            android:textColor="@color/c_666666"/>

        <TextView
            android:id="@+id/tv_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_space_headline_three"
            android:textSize="14dp"
            android:textColor="@color/c_666666"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_headline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>